Changed the src for the mango image to see if that was the problem

--- a/html/flexbox1.html
+++ b/html/flexbox1.html
@@ -25,13 +25,13 @@
 </nav>
 <div class="pane">
     <div class="card">
-        <img class="mango" src="../images/mango.jpg" alt="mango pic">
+        <img class="mango" src="../images/Mango.jpg" alt="mango pic">
     </div>
     <div class="card">
-        <img class="mango" src="../images/mango.jpg" alt="mango pic">
+        <img class="mango" src="../images/Mango.jpg" alt="mango pic">
     </div>
     <div class="card">
-        <img class="mango" src="../images/mango.jpg" alt="mango pic">
+        <img class="mango" src="../images/Mango.jpg" alt="mango pic">
     </div>
 </div>
 <main>
