added flexbox html's and css's for each flexbox lab

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="html/flexbox1.html">Flexbox Page!</a>
-    
+    <a href="html/flexbox1.html">Flexbox1 Page!</a>
+    <a href="html/flexbox2.html">Flexbox2 Page!</a>
+    <a href="html/flexbox3.html">Flexbox3 Page!</a>
 </body>
 </html>
