--- a/html/flexbox2.html
+++ b/html/flexbox2.html
@@ -8,6 +8,17 @@
 </head>
 <body>
 <h1>Flexbox2</h1>
-
+<div class="flex1">
+    <div class="flex2">
+        <a href="../index.html">home</a>
+        <a href="flexbox1.html">flexbox1</a>
+        <a href="flexbox2.html">flexbox2</a>
+    </div>
+    <div class="flex3">
+        <a href="../index.html">home</a>
+        <a href="flexbox1.html">flexbox1</a>
+        <a href="flexbox2.html">flexbox2</a>
+    </div>
+</div>
 </body>
 </html>
